Thu Aug  2 22:20:28 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * bin/fuzz.pl:

          Enabled check_for_exception_spec.

Thu Aug  2 22:02:32 UTC 2007  Steve Huston  <shuston@riverace.com>

        * tests/Dirent_Test.cpp: Fixed to allow running the test against
          directories other than "../tests". Picks hardcoded TEST_DIR if
          compiled in (as previously) but will otherwise try $top_srcdir/tests,
          $ACE_ROOT/tests, or ../tests depending on env variables present.
          Allows the test to run in autoconf builds (fixes Bugzilla 1794).
          Also removed all the ACE_ASSERTs, replacing them with informative
          diagnostics.

Thu Aug  2 21:31:32 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * examples/ConfigViewer/MainFrame.cpp:

          ZAP the last NULL usage in the distrubtion.

Thu Aug  2 20:43:18 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * apps/JAWS/clients/WebSTONE/src/bench.c:

          Zap NULL usage.

Thu Aug  2 20:24:22 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.h:

          No-thread builds, instances of ACE_TSS use their destructor
          instead of the static cleanup() method for deleting the object
          they point to. Adding a destructor specialization to enable
          non-ownership ACE_TSS behavior with no-thread builds for
          ACE_Service_Gestalt's.

Thu Aug  2 19:34:17 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * bin/fuzz.pl:

          Enhanced NULL check.

Thu Aug  2 14:19:46 UTC 2007  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * bin/tao_other_tests.lst:
          Added a new test TAO/orbsvcs/tests/Simple_Naming/run_test_ipv6.pl

Thu Aug  2 11:43:35 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.h:
          Removing extra semicolon

Thu Aug  2 09:46:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.cpp: